--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -104,12 +104,12 @@
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "ScatteringEditor.PreviewThumSize",
-                "value": "{\"m_Value\":73}"
+                "value": "{\"m_Value\":71}"
             },
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"483176caa2bd04a48aa50a213171b002\",\"type\":2},\"prefab\":{\"fileID\":7925648732891475256,\"guid\":\"6be411ad5584b904db2ecba971892b0e\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"483176caa2bd04a48aa50a213171b002\",\"type\":2},\"prefab\":{\"fileID\":7012994697124464060,\"guid\":\"0968e62276a43fb4f9d2c8bdee125da7\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"483176caa2bd04a48aa50a213171b002\",\"type\":2},\"prefab\":{\"fileID\":1791355377396852119,\"guid\":\"aefb5454562c2d04f90310ba732320da\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"483176caa2bd04a48aa50a213171b002\",\"type\":2},\"prefab\":{\"fileID\":5426457307489222857,\"guid\":\"c6a09f539125232469fd822b7f9e2d19\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"483176caa2bd04a48aa50a213171b002\",\"type\":2},\"prefab\":{\"fileID\":8903619483183690089,\"guid\":\"bcf37e129fe07b74ba046e5e636ee2cb\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[]}}"
             }
         ]
     }
